--- a/.github/workflows/do-a-thing.yml
+++ b/.github/workflows/do-a-thing.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps: 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: denoland/setup-deno@v1
       - name: testing testing
-        run: echo testing
+        run: deno lint
